- Fix the bulk actions in the Protecion Rules page
- Fix wrong WordPress action that was called in the user-registration form
- Fix rare error that happened when dripped content had no/invalid date settings
- Fix Members/Billings list to keep search filter when changing the sort option
- Fix Billings search logic to find all users that contain the search word (no exact username required anymore)
- Hide the Guest and Default memberships in the Members list, as they are useless there

1.0.0.6
----------------------------------------------------------------------
- Add logging for payment gateway transactions, can be viewed via "Billings > View Transaction logs"
- Fix subscription details when changing the membership payment_type (within 6 hours after membership update)
- Fix follow-up issue in recent Mailchimp bug fix

1.0.0.5
----------------------------------------------------------------------
- Add possibility to change payment options even when membership has active subscribers!
- Add link to Members-List from the Membership list (click on the member-count value)
- Hide inactive memberships in the Members and Protection Rules pages
- Fix compatibility issue with the wp-recaptcha plugin
- Fix several php notices and warnings ("invalid argument", "undefined index", etc.)
- Fix protection of the Private Message feature in the BuddyPress Add-on
- Fix Mailchimp Add-on to fetch all lists from Mailchimp, not only 25
- Add new hook to observe status change of subscriptions: "ms_subscription_status-<status>"

1.0.0.4
----------------------------------------------------------------------
- Fix the import tool to import data from old Membership plugin correctly (recurring payments, subscription status and end date)
- Fix the i18n support, the plugin is translated correctly again
- Fix error message that was displayed when dates of dripped memberships were saved

1.0.0.3
----------------------------------------------------------------------